--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com" rel="preconnect"/>
   <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect"/>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&amp;display=swap" rel="stylesheet"/>
-  <link href="css/style.css" rel="stylesheet"/>
+  <link href="style.css" rel="stylesheet"/>
  </head>
  <body>
   <nav class="bg-white dark:bg-elegea-medium-dark shadow-lg sticky top-0 z-50 transition-colors duration-300">
